edition = "2023";

package xtdb.block.proto;

import "google/protobuf/any.proto";
import "xtdb/log/proto/log.proto";
import "xtdb/database/proto/db.proto";

option java_multiple_files = true;

message TableBlock {
    bytes arrow_schema = 1;
    int64 row_count = 2;
    repeated xtdb.log.proto.TrieDetails tries = 3;
    map<string, bytes> column_name_to_hll = 4;
}

message TxKey {
    int64 tx_id = 1;
    int64 system_time = 2;
}

message Block {
    int64 block_index = 1;
    TxKey latest_completed_tx = 2;
    int64 latest_processed_msg_id = 4;
    repeated string table_names = 3;

    // present iff it's the cluster's primary ('xtdb') database
    map<string, xtdb.database.proto.DatabaseConfig> secondary_databases = 5;
}